@@ -1,5 +1,8 @@
 2011-03-15  Paul Eggert  <eggert@cs.ucla.edu>
 
+	* doc.c (Fdocumentation, Fsnarf_documentation): Move locals to
+	avoid shadowing.
+
 	* lisp.h (eassert): Check that the argument compiles, even if
 	ENABLE_CHECKING is not defined.
 
